<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PA-Android</string>
    <string name="app_desc">Annual Android Project: GROUP 4</string>
    <!-- Login-related strings -->
    <string name="name_account">Account name</string>
    <string name="email">Your email address</string>
    <string name="name_password">Password</string>
    <string name="password">Your password</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="not_account">No account yet? Join us!</string>
    <string name="plaholder_pseudo">Your nickname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="plaholder_confirm_password">Confirm password</string>
    <string name="title_email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="login_button_text">Sign In</string>
    <string name="signup_button_text">Sign UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_profil">Mary Smith</string>
    <string name="phone_profil">E-MAIL: koumwinnie@gmail.com</string>
    <string name="number_friend">Friends</string>
    <string name="number_message">Messages</string>
    <string name="place_holder_search">Search for a user…</string>
    <string name="place_holder_search_game">Search for a game…</string>
    <string name="item_name_game">King Grin</string>
    <string name="item_name_cat">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="read_more_game">Read more</string>
    <string name="nb_result">Number of results : </string>
    <string name="no_user">No users found</string>
    <string name="no_game">No game available</string>
    <string name="my_friend">My Friends</string>
    <string name="my_chat">Message</string>
    <string name="title_search_user">Search for a user</string>
    <string name="title_search_game">Search for a game</string>
    <string name="my_search">Research</string>
    <string name="my_profil" translatable="false">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_list_game">List of games</string>
    <string name="search_user">Search for a user</string>
    <string name="my_game">My List of Game</string>
    <string name="mdp">Please enter your email to reset your password</string>
    <string name="renvoyer_code">Resend my password</string>
    <string name="message_send">An email has been sent to your email address, please login to complete the password reset process</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="invalid_password_confir">The password entered does not match!</string>
    <string name="message_register">Fail to register</string>
    <string name="message_login">Email or password incorrect</string>
    <string name="message_login_home">You must be logged in to access home page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>