<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_web"
    tools:context=".LoginFragment"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:layout_marginVertical="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_account"
                android:id="@+id/loginText"
                android:textSize="@dimen/size_text_title_edit_text"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:layout_marginVertical="@dimen/marging_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:padding="@dimen/pading_edittext"
                android:textSize="@dimen/size_text_regular"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_user"
                android:textColor="@color/gray"
                android:drawablePadding="@dimen/drawable_padding_icon"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_password"
                android:id="@+id/passwordText"
                android:textSize="@dimen/size_text_title_edit_text"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:layout_marginBottom="@dimen/marging_text"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:inputType="textPassword"
                android:padding="@dimen/pading_edittext"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock"
                android:drawableEnd="@drawable/circle_image"
                android:textColor="@color/gray"
                android:drawablePadding="@dimen/drawable_padding_icon"
                android:textSize="@dimen/size_text_regular"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                >
                <TextView
                    android:id="@+id/forget_password_text_title"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textSize="@dimen/size_text_regular"
                    android:textAlignment="center"
                    android:layout_marginVertical="@dimen/marging_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/gray"/>
                <TextView
                    android:id="@+id/signup_text"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/not_account"
                    android:textSize="@dimen/size_text_regular"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/forget_password_text_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>