<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/third"
    tools:context=".ResearchUserFragment">

    <include layout="@layout/loader" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:id="@+id/homeSearchBarSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/text_research_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:hint="@string/place_holder_search"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill" />


            <ImageView
                android:id="@+id/iconsearchbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:src="@drawable/icons8_search"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <TextView
            android:id="@+id/nb_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nb_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeSearchBarSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_user_search_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nb_result" />

        <TextView
            android:id="@+id/no_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="12dp"
            android:text="@string/no_user"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_user_search_recyclerview" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>